refactor: converge module repository boundaries